--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URL=mongodb+srv://duylong:duylong@cluster0.2tnx95y.mongodb.net/
+MONGODB_URL=mongodb+srv://duylong:duylong@cluster0.2tnx95y.mongodb.net/duylong
