--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=8000
 MONGODB_URL=mongodb+srv://duylong:duylong@cluster0.2tnx95y.mongodb.net/duylong
+
+#SETUP ACCESS TOKEN
+JWT_ACCESS_TOKEN = JUSTASECRECT
+JWT_ACCESS_EXPIRE = 1 days
